Fixed layout ishues on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,1 @@
 @import "tailwindcss";
-
-@media (max-height: 550px) {
-    #social-links{
-        @apply hidden;
-    }
-
-    #contact-me-form{
-        @apply mb-20;
-    }
-}
